force-app/main/default/objects/GFERP__Item__c/GFERP__Item__c.object-meta.xml
<CustomObject>
    <label>Item</label>
    <nameField>
        <label>Item No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>