force-app/main/default/objects/GFERP__Item__c/fields/adsBanners__c.field-meta.xml
<CustomField>
    <fullName>adsBanners__c</fullName>
    <label>adsBanners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>