force-app/main/default/objects/GFERP__Item__c/fields/Capacity_Volume__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Volume__c</fullName>
    <label>Capacity/Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>