force-app/main/default/objects/GFERP__Item__c/fields/Disabled_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Shipping_Method__c</fullName>
    <label>Disabled Shipping Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>