force-app/main/default/objects/GFERP__Item__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>