force-app/main/default/objects/GFERP__Item__c/fields/Display_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_English__c</fullName>
    <label>Display Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>