force-app/main/default/objects/GFERP__Item__c/fields/GFCON__Import_Item__c.field-meta.xml
<CustomField>
    <fullName>GFCON__Import_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>null</inlineHelpText>
    <label>Import Item</label>
    <referenceTo>GFCON__Import_Item__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>