force-app/main/default/objects/GFERP__Item__c/fields/GFCON__On_Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>GFCON__On_Customer_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Customer Portal</label>
    <type>Checkbox</type>
</CustomField>