force-app/main/default/objects/GFERP__Item__c/fields/GFCON__Shopify_Item__c.field-meta.xml
<CustomField>
    <fullName>GFCON__Shopify_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the item has been uploaded to the Shopify website.</inlineHelpText>
    <label>Uploaded to Shopify</label>
    <type>Checkbox</type>
</CustomField>