force-app/main/default/objects/GFERP__Item__c/fields/GFCON__WooCommerce_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>GFCON__WooCommerce_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the item has been uploaded to the WooCommerce website.</inlineHelpText>
    <label>Uploaded to WooCommerce</label>
    <type>Checkbox</type>
</CustomField>