force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Average_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Average_Base_Cost__c</fullName>
    <formula>if (ROUND(GFERP__Qty_Base_on_Hand__c,0.00001) = 0, 0, GFERP__Inventory_Value__c / GFERP__Qty_Base_on_Hand__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The calculated average cost for the Base Unit of Measure of the item.  (Inventory Value / Qty. Based on Hand)</inlineHelpText>
    <label>Average Base Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>