force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Base_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Base_Unit_of_Measure__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Base Unit of Measure for the item&apos;s inventory, such as EA, or LB.</inlineHelpText>
    <label>Base Unit of Measure</label>
    <referenceTo>GFERP__Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Warehouse_Product_del</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>