force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Base_UOM_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Base_UOM_Record_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to define the record Id from the Item Unit of Measure object for the Base Unit of Measure of the item.</inlineHelpText>
    <label>Base UOM Record Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>GFERP__Item_Unit_of_Measure__c.GFERP__Item__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GFERP__Item_Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Items (Base UOM)</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>