force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Batch_Manufacturing__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Batch_Manufacturing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Item is a batch manufactured item.</inlineHelpText>
    <label>Batch Manufacturing</label>
    <type>Checkbox</type>
</CustomField>