force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Batch_Output_Tolerance_Pct__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Batch_Output_Tolerance_Pct__c</fullName>
    <inlineHelpText>When producing this item, enter the tolerance % to be used on a batch manufactured work order.</inlineHelpText>
    <label>Batch Output Tolerance %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>