force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Blocked__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this field will not allow any inventory transactions to be posted for this item.  An Item cannot be blocked unless there is 0 on hand qty. and 0 open transactions.</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>