force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Brand__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Brand__c</fullName>
    <inlineHelpText>The brand of the Item.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Almarai</fullName>
            </value>
            <value>
                <fullName>Cadbury</fullName>
            </value>
            <value>
                <fullName>Hansaplast</fullName>
            </value>
            <value>
                <fullName>Malaki</fullName>
            </value>
            <value>
                <fullName>Maltesers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>