force-app/main/default/objects/GFERP__Item__c/fields/GFERP__By_Product__c.field-meta.xml
<CustomField>
    <fullName>GFERP__By_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter an Inventory item that will be produced as a by-product of the manufactured item.</inlineHelpText>
    <label>By-Product</label>
    <referenceTo>GFERP__Item__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>