force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Catch_Weight__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Catch_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the item is a catch weight item.</inlineHelpText>
    <label>Catch Weight</label>
    <type>Checkbox</type>
</CustomField>