force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Catch_Weight_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Catch_Weight_Tolerance__c</fullName>
    <inlineHelpText>If this is a Catch Weight item, enter the tolerance % allowed between the Quantity and the Qty. Base of a Catch Weight item.</inlineHelpText>
    <label>Catch Weight Tolerance %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>