force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Chargeback__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Chargeback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the item is a chargeback service item.</inlineHelpText>
    <label>Chargeback</label>
    <type>Checkbox</type>
</CustomField>