force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Consumption_Tolerance_Pct__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Consumption_Tolerance_Pct__c</fullName>
    <inlineHelpText>When consuming this item on a batch manufactured work order, enter the tolerance % permitted.</inlineHelpText>
    <label>Batch Consumption Tolerance %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>