force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Costing_Method__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Costing_Method__c</fullName>
    <inlineHelpText>The costing method of the Item with two possible options: Standard or FIFO.</inlineHelpText>
    <label>Costing Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIFO</fullName>
                <default>true</default>
                <label>FIFO</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>