force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Country_of_Origin2__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Country_of_Origin2__c</fullName>
    <inlineHelpText>The Country where the item is purchased or manufactured.</inlineHelpText>
    <label>Country of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Countries</valueSetName>
    </valueSet>
</CustomField>