force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Default_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Default_Batch_Size__c</fullName>
    <formula>GFERP__Default_Batch_Unit_of_Measure__r.GFERP__Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The conversion factor of the Default Batch Unit of Measure.</inlineHelpText>
    <label>Default Batch Size</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>