force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Default_Batch_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Default_Batch_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default Batch Unit of Measure for the batch manufactured item.</inlineHelpText>
    <label>Default Batch Unit of Measure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GFERP__Item_Unit_of_Measure__c.GFERP__Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>GFERP__Item_Unit_of_Measure__c.GFERP__Type__c</field>
            <operation>equals</operation>
            <value>Batch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GFERP__Item_Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Items (Default Batch Unit of Measure)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>