force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Default_Bin__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Default_Bin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Define the bin to be used along with the Default Warehouse as the put-away and storage location of the item.</inlineHelpText>
    <label>Default Bin</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GFERP__bin__c.GFERP__Warehouse__c</field>
            <operation>equals</operation>
            <valueField>$Source.GFERP__Default_Warehouse__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GFERP__bin__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items_del</relationshipName>
    <type>Lookup</type>
</CustomField>