force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Default_Shelf__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Default_Shelf__c</fullName>
    <inlineHelpText>The default Shelf of the item.  This is a text field to be printed on the Pack List document.  In certain environments, it is more efficient to use a text field to specify where the item is, instead of setting up a full bin management system.</inlineHelpText>
    <label>Default Shelf</label>
    <length>80</length>
    <type>Text</type>
</CustomField>