force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Default_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Default_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default warehouse of the item.</inlineHelpText>
    <label>Default Warehouse</label>
    <referenceTo>GFERP__Warehouse__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items_del</relationshipName>
    <type>Lookup</type>
</CustomField>