force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Description__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Description__c</fullName>
    <inlineHelpText>Use this field for the description of the item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>