force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Disassemble_When_Receive__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Disassemble_When_Receive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, as soon as the item is received on a Whse. Receipts, a dissemble Item Journal will be created and posted to consume the item and output components to inventory.</inlineHelpText>
    <label>Disassemble When Receive</label>
    <type>Checkbox</type>
</CustomField>