force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Do_Not_Check_Qty_When_Post__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Do_Not_Check_Qty_When_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Qty Base on Hand, Qty. Base on Bin Content and Remaining Qty. Base on Hand of the item are not compared for consistency during the inventory posting routine.It is recommended not to select this field.Notify the administrator to select this.</inlineHelpText>
    <label>Do Not Check Qty. When Post</label>
    <type>Checkbox</type>
</CustomField>