force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Due_Date_Weekdays_Only__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Due_Date_Weekdays_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For both Order Date and Due Date</description>
    <inlineHelpText>Used in supply planning.  If checked, the Order Date will fall on weekdays only.</inlineHelpText>
    <label>Weekdays Only</label>
    <type>Checkbox</type>
</CustomField>