force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Expected_Value__c</fullName>
    <inlineHelpText>The total calculated inventory value of the &apos;received not invoiced&apos; and &apos;&apos;shipped not invoiced&apos; amounts based on the Item Ledger Entries.</inlineHelpText>
    <label>Expected Value</label>
    <summarizedField>GFERP__Item_Ledger_Entry__c.GFERP__Expected_Cost__c</summarizedField>
    <summaryForeignKey>GFERP__Item_Ledger_Entry__c.GFERP__Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>