force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Flushing_Method__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Flushing_Method__c</fullName>
    <inlineHelpText>Flushing Method = Manual - both output and consumption are posted together on production journals. Flushing Method = Backward - multiple outputs can be posted and the expected consumption can be posted based on total output quantity before the work order</inlineHelpText>
    <label>Flushing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Backward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>