force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Freight_Class__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Freight_Class__c</fullName>
    <inlineHelpText>This will print on the Bill of Lading.</inlineHelpText>
    <label>Freight Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Freight_Class</valueSetName>
    </valueSet>
</CustomField>