force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Handling_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Handling_Unit_Type__c</fullName>
    <inlineHelpText>This will print on the Bill of Lading.</inlineHelpText>
    <label>Handling Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Package_Type</valueSetName>
    </valueSet>
</CustomField>