force-app/main/default/objects/GFERP__Item__c/fields/GFERP__HazMat__c.field-meta.xml
<CustomField>
    <fullName>GFERP__HazMat__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will print on the Bill of Lading.</inlineHelpText>
    <label>HazMat</label>
    <type>Checkbox</type>
</CustomField>