force-app/main/default/objects/GFERP__Item__c/fields/GFERP__HazMat_Class__c.field-meta.xml
<CustomField>
    <fullName>GFERP__HazMat_Class__c</fullName>
    <inlineHelpText>This will print on the Bill of Lading.</inlineHelpText>
    <label>HazMat Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>