force-app/main/default/objects/GFERP__Item__c/fields/GFERP__HS_Tariff_Classification_No__c.field-meta.xml
<CustomField>
    <fullName>GFERP__HS_Tariff_Classification_No__c</fullName>
    <inlineHelpText>This will print on the Certificate of Origin document.</inlineHelpText>
    <label>HS Tariff Classification No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>