force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Inventory_Class__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Inventory_Class__c</fullName>
    <inlineHelpText>The Inventory Class of the Item with three possible values: Raw Materials, Subassembly or Finished Goods.  This field will define what GL Account is used from the Company Setup when transactions are posted.</inlineHelpText>
    <label>Inventory Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished Goods</fullName>
                <default>true</default>
                <label>Finished Goods</label>
            </value>
            <value>
                <fullName>Subassembly</fullName>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>