force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Inventory_Value__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Inventory_Value__c</fullName>
    <inlineHelpText>The calculated inventory value of the item based on the Item Ledger Entries.  This will be the total of the Expected Value plus the Invoiced Value.</inlineHelpText>
    <label>Inventory Value</label>
    <summarizedField>GFERP__Item_Ledger_Entry__c.GFERP__Total_Cost__c</summarizedField>
    <summaryForeignKey>GFERP__Item_Ledger_Entry__c.GFERP__Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>