force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Invoiced_Value__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Invoiced_Value__c</fullName>
    <inlineHelpText>The total calculated invoiced value of the item based on the Item Ledger Entries.</inlineHelpText>
    <label>Invoiced Value</label>
    <summarizedField>GFERP__Item_Ledger_Entry__c.GFERP__Invoiced_Cost__c</summarizedField>
    <summaryForeignKey>GFERP__Item_Ledger_Entry__c.GFERP__Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>