force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Is_Allergen__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Is_Allergen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this item is an allergen.  The field is printed on the Receipt Label report.</inlineHelpText>
    <label>Is Allergen</label>
    <type>Checkbox</type>
</CustomField>