force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Is_Water__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Is_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this item is a water item.  The active Ingredient % defined on the item formula is used to determined the net requirement of the water on a work order.</inlineHelpText>
    <label>Is Water</label>
    <type>Checkbox</type>
</CustomField>