force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Item_Category__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Item_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Use this field to classify items for filtering and reporting.  This field is the top level grouping for items.</inlineHelpText>
    <label>Item Category</label>
    <referenceTo>GFERP__Item_Category__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>