force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Item_No_Description__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Item_No_Description__c</fullName>
    <formula>Name&amp;&apos; &apos;&amp;&apos;-&apos;&amp;&apos; &apos;&amp;GFERP__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A combination of the Item No. and Description.</inlineHelpText>
    <label>Item No.-Description</label>
    <type>Text</type>
</CustomField>