force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Item_Type__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Item_Type__c</fullName>
    <inlineHelpText>The type of item with two possible values - Inventory or Service.  Inventory transaction will be maintained for Inventory items, but not for Service type items.</inlineHelpText>
    <label>Item Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Item_Type</valueSetName>
    </valueSet>
</CustomField>