force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Landed_Cost3_Pct__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Landed_Cost3_Pct__c</fullName>
    <inlineHelpText>The estimated landed cost % of the item.  The field label can be changed by using the Translation workbench.</inlineHelpText>
    <label>Landed Cost3 %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>