force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Last_Invoiced_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Last_Invoiced_Base_Cost__c</fullName>
    <inlineHelpText>The last base cost the item was invoiced at or produced at.</inlineHelpText>
    <label>Last Invoiced Base Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>