force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Last_Rollup_Date__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Last_Rollup_Date__c</fullName>
    <inlineHelpText>The last date the Rollup Std. Cost function was run for the item.</inlineHelpText>
    <label>Last Rollup Date</label>
    <type>Date</type>
</CustomField>