force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Lead_Time_Days__c</fullName>
    <inlineHelpText>Enter the default lead time days for the item when purchased from the Preferred Vendor of the item.</inlineHelpText>
    <label>Lead Time Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>