force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Long_Description__c</fullName>
    <inlineHelpText>A picture of the item can be uploaded here.</inlineHelpText>
    <label>Item Picture</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>