force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Lot_Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Lot_Days_to_Expire__c</fullName>
    <inlineHelpText>The default number of days a newly entered lot will expire.</inlineHelpText>
    <label>Lot Days to Expire</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>