force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Lot_Picking_Option__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Lot_Picking_Option__c</fullName>
    <inlineHelpText>Define the preferred method of picking lots:  FIFO (first in first out), FEFO (first expiration first out), or Bin Ranking.</inlineHelpText>
    <label>Lot Picking Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEFO</fullName>
                <default>true</default>
                <label>FEFO</label>
            </value>
            <value>
                <fullName>FIFO</fullName>
            </value>
            <value>
                <fullName>Bin Ranking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>