force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Lot_Tracked__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Lot_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, a Lot number is mandatory for all inventory transactions.</inlineHelpText>
    <label>Lot Tracked</label>
    <type>Checkbox</type>
</CustomField>