force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Low_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Low_Level_Code__c</fullName>
    <inlineHelpText>This is the calculated hierarchical level of the item based on Item Formulas.  The lower the number, the higher the hierarchical order.</inlineHelpText>
    <label>Low Level Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>