force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the manufacturer of the item from the lookup to the Account object.</inlineHelpText>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Items (Manufacturer)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>