force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Maximum_Quantity__c</fullName>
    <inlineHelpText>The default maximum quantity of the item for reporting purposes. This value is not currently used in the supply planning calculation.</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>