force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Min_Days_to_Expire_When_Pick__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Min_Days_to_Expire_When_Pick__c</fullName>
    <inlineHelpText>The minimum number of days acceptable to pick an item before the lot will expire.</inlineHelpText>
    <label>Min. Days to Expire When Pick</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>