force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Net_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will print on the Certificate of Origin document.</inlineHelpText>
    <label>Net Cost</label>
    <type>Checkbox</type>
</CustomField>