force-app/main/default/objects/GFERP__Item__c/fields/GFERP__NMFC__c.field-meta.xml
<CustomField>
    <fullName>GFERP__NMFC__c</fullName>
    <inlineHelpText>This number will print on the Bill of Lading.</inlineHelpText>
    <label>NMFC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>