force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Old_Item_No__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Old_Item_No__c</fullName>
    <inlineHelpText>The Item number from the legacy system.</inlineHelpText>
    <label>Old Item No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>