force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Outbound_Freight__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Outbound_Freight__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this service item is used for outbound freight.</inlineHelpText>
    <label>Outbound Freight</label>
    <type>Checkbox</type>
</CustomField>