force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Outside_Service__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Outside_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this service item is used as an outside service item.</inlineHelpText>
    <label>Outside Service</label>
    <type>Checkbox</type>
</CustomField>