force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Phantom_BOM__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Phantom_BOM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this Item does not hold inventory and is used to group ingredients in the BOM structure.</inlineHelpText>
    <label>Phantom BOM</label>
    <type>Checkbox</type>
</CustomField>