force-app/main/default/objects/GFERP__Item__c/fields/GFERP__PO_Qty_Tolerance_Pct__c.field-meta.xml
<CustomField>
    <fullName>GFERP__PO_Qty_Tolerance_Pct__c</fullName>
    <inlineHelpText>If an over receipt of the item is allowed on a purchase order, enter the tolerance % permitted.</inlineHelpText>
    <label>PO Qty. Tolerance %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>