force-app/main/default/objects/GFERP__Item__c/fields/GFERP__Preference_Criterion__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Preference_Criterion__c</fullName>
    <inlineHelpText>This will print on the Certificate of Origin document.</inlineHelpText>
    <label>Preference Criterion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>